more attempts to fix spacing

--- a/style.css
+++ b/style.css
@@ -83,5 +83,9 @@ header {
   }
 
   nav ul li {
-    padding-left: 20px; 
-}
+    padding-left: 30px; 
+  }
+  
+  nav ul li::before {
+    left: 15px; 
+  }
